--- a/src/buttons.html
+++ b/src/buttons.html
@@ -15,71 +15,80 @@
 
         <h1>Botões</h1>
 
-        <!-- Botão básico -->
-        <button class="btn waves-light waves-effect" type="submit">
+        <a class="btn waves-effect waves-light">
             <i class="material-icons left">send</i> Enviar
-        </button>
+        </a>
 
-        <!-- Botão básico com outra cor -->
-        <button class="btn waves-light waves-effect orange darken-2" type="submit">
+        <a class="btn waves-effect waves-light orange darken-2">
             <i class="material-icons left">close</i> Cancelar
-        </button>
+        </a>
 
-        <!-- Botão sem sombra -->
-        <button class="btn waves-light waves-effect cyan darken-2 white-text btn-flat" type="submit">
+        <a class="btn waves-effect waves-light cyan darken-2 white-text btn-flat">
             Editar
-        </button>
+        </a>
 
-        <!-- Botão desabilitado -->
-        <button class="btn waves-light waves-effect cyan darken-2 disabled" type="submit">
+        <a class="btn waves-effect waves-light cyan darken-2 white-text disabled">
             Editar
-        </button>
+        </a>
 
         <h3>Tamanhos</h3>
 
-        <!-- Botão pequeno -->
-        <button class="btn waves-light waves-effect btn-small" type="submit">Enviar</button>
-        <button class="btn waves-light waves-effect" type="submit">Enviar</button>
-        <!-- Botão grande -->
-        <button class="btn waves-light waves-effect btn-large" type="submit">Enviar</button>
+        <a class="btn waves-effect waves-light btn-small">
+            Enviar
+        </a>
+        <a class="btn waves-effect waves-light">
+            Enviar
+        </a>
+        <a class="btn waves-effect waves-light btn-large">
+            Enviar
+        </a>
 
         <h3>Floating</h3>
 
         <div class="card">
             <div class="card-content">
-                <span class="card-title">Meu Card</span>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel deleniti at perferendis quisquam atque quidem velit ipsam facere? Doloribus, necessitatibus?</p>
+                <span class="card-title">My Card</span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, officiis?</p>
             </div>
             <div class="card-action">
-                <!-- Botão redondo -->
-                <button class="btn waves-light waves-effect red btn-floating">
+                <a class="btn btn-floating waves-light waves-effect red">
                     <i class="material-icons left">close</i>
-                </button>
+                </a>
             </div>
         </div>
 
         <div class="card">
             <div class="card-content">
-                <span class="card-title">Meu Card</span>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel deleniti at perferendis quisquam atque quidem velit ipsam facere? Doloribus, necessitatibus?</p>
-                <!-- Botão redondo na base -->
-                <button class="btn waves-light waves-effect red btn-floating pulse halfway-fab">
-                        <i class="material-icons left">close</i>
-                </button>
+                <span class="card-title">My Card</span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, officiis?</p>
             </div>
+            <a class="btn btn-floating waves-light waves-effect red pulse halfway-fab">
+                <i class="material-icons ">close</i>
+            </a>
         </div>
 
     </div>
 
-    <!-- Botão de ação -->
     <div class="fixed-action-btn">
         <a class="btn-floating btn-large red">
-            <i class="large material-icons">edit</i>
+            <i class="material-icons">edit</i>
         </a>
         <ul>
-            <li><a class="btn-floating red"><i class="material-icons">timeline</i></a></li>
-            <li><a class="btn-floating yellow darken-3"><i class="material-icons">backup</i></a></li>
-            <li><a class="btn-floating green"><i class="material-icons">build</i></a></li>
+            <li>
+                <a class="btn-floating red">
+                    <i class="material-icons">timeline</i>
+                </a>
+            </li>
+            <li>
+                <a class="btn-floating yellow darken-3">
+                    <i class="material-icons">backup</i>
+                </a>
+            </li>
+            <li>
+                <a class="btn-floating green">
+                    <i class="material-icons">build</i>
+                </a>
+            </li>
         </ul>
     </div>
 
